# fixd

./:  README.md  .gitignore  README.md  code-generator.js  dev.sh  docker-compose.yml  file-fetcher.js  issue-to-code.js  package-lock.json  package.json  pull-request-submitter.js  pull-requester.js  server.js  smee-client.js  test_client.py
path/to/: file1.js
proto/: code_agent.proto
services/code-agent/: Dockerfile  README.md  package-lock.json  pyproject.toml
services/code-agent/src/: code_agent.py
services/code-agent/src/code_agent/: __main__.py  code_agent_impl.py  code_agent_pb2.py  code_agent_pb2_grpc.py  code_is_so_cool.py  prompt.py  service.py  test_client.py
services/web/: DockerFile  package-lock.json  package.json
services/web/src/: issue-to-code.ts  pull-request-submitter.ts  server.ts  types.ts
src/: .eslintrc.js  file-fetcher.ts  issue-to-code.ts  pull-request-submitter.ts  red-to-blue.ts  server.ts  smee-client.js  types.ts
