[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code_agent"
version = "0.1.0"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
description = "A gRPC service for automated code fixes"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "grpcio>=1.48.2",
    "grpcio-tools>=1.48.2",
    "protobuf>=3.20.3",
]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff]
select = ["E", "F", "I"]
ignore = []
line-length = 88
