[tool.poetry]
name = "code_agent"
version = "0.1.0"
description = "A gRPC service for automated code fixes"
authors = ["flavorfulhearing@gmail.com"]
packages = [{include = "code_agent", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
grpcio = ">=1.48.2"
grpcio-tools = ">=1.48.2"
protobuf = ">=3.20.3"
codegen = "0.33.1"
langchain-core = "0.1.0"
langchain = "0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff]
select = ["E", "F", "I"]
ignore = []
line-length = 88