[tool.poetry]
name = "code_agent"
version = "0.1.0"
description = "A gRPC service for automated code fixes"
authors = ["flavorfulhearing@gmail.com"]
packages = [{include = "code_agent", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
grpcio = ">=1.48.2"
grpcio-tools = ">=1.48.2"
protobuf = ">=3.20.3"
codegen = "0.33.1"
langchain-core = "^0.3.34"
langchain = "^0.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff]
select = ["E", "F", "I", "B", "C4", "ARG", "SIM", "ERA", "PL"]
ignore = []
line-length = 88
target-version = "py312"  # Match your Python version
extend-exclude = ["**/protos"]